[gd_scene load_steps=6 format=3 uid="uid://cdb50hs4pp5a1"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_6ypji"]
[ext_resource type="Texture2D" uid="uid://b4tvj6fewpt1l" path="res://assets/temp/bullet.png" id="2_ckspv"]

[sub_resource type="Shader" id="Shader_fi6vh"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
	float time = clamp(abs(sin(TIME)), 0.0, 1.0);
	COLOR.rgb = vec3(time, 1.0 - time, 1.0 + time);
	COLOR.a = texture(TEXTURE, UV).a;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gg6xl"]
resource_local_to_scene = true
shader = SubResource("Shader_fi6vh")

[sub_resource type="CircleShape2D" id="CircleShape2D_wf4kf"]

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_6ypji")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gg6xl")
scale = Vector2(2, 2)
texture = ExtResource("2_ckspv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wf4kf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
